...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3gc-6q-vog">
                                            <rect key="frame" x="8" y="8" width="584" height="25"/>
                                            <accessibility key="accessibilityConfiguration" identifier="Title:"/>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due Date: " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="DV2-Cl-J5K">
                                            <rect key="frame" x="8" y="41" width="584" height="19"/>
                                            <accessibility key="accessibilityConfiguration" identifier="Due Date:"/>
                                            <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status Date:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="sJi-fy-FQT">
                                            <rect key="frame" x="8" y="95" width="584" height="19"/>
                                            <accessibility key="accessibilityConfiguration" identifier="Status Date:"/>
...
                            </connections>
                        </segmentedControl>
                        <barButtonItem key="rightBarButtonItem" title="New" id="ACR-PH-vtn">
                            <connections>
                                <segue destination="ywX-AT-Qdr" kind="show" identifier="NewTaskSegue" id="hxE-qg-N6P"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Yrz-Qj-KMs">
                                                <rect key="frame" x="20" y="57" width="109" height="15"/>
                                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="13"/>
...
                                                <segments>
                                                    <segment title="New"/>
                                                    <segment title="Done"/>
                                                    <segment title="Canceled"/>
                                                </segments>
                                                <connections>
...
                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                    <navigationItem key="navigationItem" id="scD-f2-vQt">
                        <barButtonItem key="leftBarButtonItem" title="Apply" id="e6a-eL-ZnE">
                            <connections>
                                <action selector="applyButtonSelected:" destination="ywX-AT-Qdr" id="fSs-3y-IwF"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Clear" id="3EK-uG-4Nd">
                            <connections>
                                <action selector="clearButtonSelected:" destination="ywX-AT-Qdr" id="3fW-CG-dsy"/>
...
